adds pkg/errors

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -36,3 +36,7 @@
   non-go = true
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  name = "github.com/pkg/errors"
+  version = "0.8.0"
