--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
 
-test-data/
+testdata/*.json.gz
 main
 test.db
 test.db-journal
