adds bash script for starting dev containers locally

--- a/cmd/aggregate/Dockerfile
+++ b/cmd/aggregate/Dockerfile
@@ -6,4 +6,4 @@ ENV DB="mysql"
 ENV CONNSTRING="grafana:password@tcp(localhost:3306)/grafana?collation=utf8mb4_unicode_ci"
 
 COPY aggregate /bin/aggregate
-ENTRYPOINT [ "/bin/aggregate", "-database=${DB}", "-connectionString=${CONNSTRING}" ]
+ENTRYPOINT [ "/bin/aggregate", "-database=${DB}", "-connectionString=${CONNSTRING}", "-maxDurationMin=10" ]
