--- a/devenv/archive.yaml
+++ b/devenv/archive.yaml
@@ -1,9 +1,10 @@
 version: "2"
 services:
-  prometheus:
+  archive:
     image: grafana/github-stats-archive:latest
     network_mode: host
     command:
       - '-database=postgres'
       - '-connstring=postgresql://grafana:password@localhost:5432/grafana?sslmode=disable'
-      - '-maxDuration=10m'
+      - '-maxDuration=2m'
+      - '-orgNames=grafana'
