--- a/devenv/streams.yaml
+++ b/devenv/streams.yaml
@@ -1,6 +1,6 @@
 version: "2"
 services:
-  prometheus:
+  streams:
     image: grafana/github-stats-streams:latest
     network_mode: host
     command:
