refactor: github event aggregation
read archived events from database for event aggregations
rename streams to github-event-aggregator
cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,7 @@ test2.db
 log.log
 
 cmd/github-archive-parser/github-archive-parser
-cmd/aggregate/aggregate
-cmd/streams/streams
+cmd/github-event-aggregator/github-event-aggregator
 cmd/bots/bots
 devenv/prod-archive.yaml
 .uptodate
