--- a/devenv/event-aggregator.yaml
+++ b/devenv/event-aggregator.yaml
@@ -7,3 +7,4 @@ services:
       - '-database=postgres'
       - '-fromConnectionstring=postgresql://grafana:password@localhost:5432/grafana?sslmode=disable'
       - '-toConnectionString=postgresql://grafana:password@localhost:5432/grafana?sslmode=disable'
+      - '-limit=5000'
