add sample docker compose files for postgres and mysql and update readme

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,6 @@ cmd/github-archive-parser/github-archive-parser
 cmd/github-event-aggregator/github-event-aggregator
 cmd/bots/bots
 cmd/local-gharchive-server/local-gharchive-server
-devenv/prod-archive.yaml
-devenv/prod-event-aggregator.yaml
+devenv/prod-*-archive-parser.yaml
+devenv/prod-*-event-aggregator.yaml
 .uptodate
