Use multi-stage Docker builds for compiling executables

--- a/cmd/bots/Dockerfile
+++ b/cmd/bots/Dockerfile
@@ -1,4 +1,26 @@
-FROM debian:buster-slim
+# Builder image
+FROM golang:1.12 AS builder
 
-COPY bots /bin/bots
+WORKDIR /build/
+
+COPY ./cmd ./cmd
+COPY ./pkg ./pkg
+COPY ./vendor ./vendor
+COPY ./go.mod ./go.sum ./
+
+RUN go build -mod=vendor \
+  -o /build/bots \
+  ./cmd/bots
+
+# Runtime image
+
+FROM debian:buster-slim AS runtime
+
+ENV DEBIAN_FRONTEND noninteractive
+RUN apt-get update && \
+  apt-get install -y ca-certificates
+
+COPY --from=builder /build/bots /bin/bots
+
 ENTRYPOINT [ "/bin/bots" ]
+CMD [ "-help" ]
