--- a/cmd/github-archive-parser/Dockerfile
+++ b/cmd/github-archive-parser/Dockerfile
@@ -1,6 +1,26 @@
-FROM debian:buster-slim
+# Builder image
+FROM golang:1.12 AS builder
 
-RUN apt-get update && apt-get install -y ca-certificates
+WORKDIR /build/
 
-COPY github-archive-parser /bin/github-archive-parser
+COPY ./cmd ./cmd
+COPY ./pkg ./pkg
+COPY ./vendor ./vendor
+COPY ./go.mod ./go.sum ./
+
+RUN go build -mod=vendor \
+  -o /build/github-archive-parser \
+  ./cmd/github-archive-parser
+
+# Runtime image
+
+FROM debian:buster-slim AS runtime
+
+ENV DEBIAN_FRONTEND noninteractive
+RUN apt-get update && \
+  apt-get install -y ca-certificates
+
+COPY --from=builder /build/github-archive-parser /bin/github-archive-parser
+
 ENTRYPOINT [ "/bin/github-archive-parser" ]
+CMD [ "-help" ]
