--- a/cmd/github-event-aggregator/Dockerfile
+++ b/cmd/github-event-aggregator/Dockerfile
@@ -1,6 +1,26 @@
-FROM debian:buster-slim
+# Builder image
+FROM golang:1.12 AS builder
 
-RUN apt-get update && apt-get install -y ca-certificates
+WORKDIR /build/
 
-COPY github-event-aggregator /bin/github-event-aggregator
+COPY ./cmd ./cmd
+COPY ./pkg ./pkg
+COPY ./vendor ./vendor
+COPY ./go.mod ./go.sum ./
+
+RUN go build -mod=vendor \
+    -o /build/github-event-aggregator \
+    ./cmd/github-event-aggregator
+
+# Runtime image
+
+FROM debian:buster-slim AS runtime
+
+ENV DEBIAN_FRONTEND noninteractive
+RUN apt-get update && \
+  apt-get install -y ca-certificates
+
+COPY --from=builder /build/github-event-aggregator /bin/github-event-aggregator
+
 ENTRYPOINT [ "/bin/github-event-aggregator" ]
+CMD [ "-help" ]
