--- a/cmd/local-gharchive-server/Dockerfile
+++ b/cmd/local-gharchive-server/Dockerfile
@@ -1,6 +1,26 @@
-FROM debian:buster-slim
+# Builder image
+FROM golang:1.12 AS builder
 
-RUN apt-get update && apt-get install -y ca-certificates
+WORKDIR /build/
 
-COPY local-gharchive-server /bin/local-gharchive-server
+COPY ./cmd ./cmd
+COPY ./pkg ./pkg
+COPY ./vendor ./vendor
+COPY ./go.mod ./go.sum ./
+
+RUN go build -mod=vendor \
+  -o /build/local-gharchive-server \
+  ./cmd/local-gharchive-server
+
+# Runtime image
+
+FROM debian:buster-slim AS runtime
+
+ENV DEBIAN_FRONTEND noninteractive
+RUN apt-get update && \
+  apt-get install -y ca-certificates
+
+COPY --from=builder /build/local-gharchive-server /bin/local-gharchive-server
+
 ENTRYPOINT [ "/bin/local-gharchive-server" ]
+CMD [ "-help" ]
